--- a/Server/config.ini
+++ b/Server/config.ini
@@ -1,7 +1,8 @@
 [General]
-savepath = C:\Movies
+savepath = C:\Movies\plexSyncDownloaded
 
 [Server]
+name = PLEX-PC
 host = 127.0.0.1
 port = 54000
 
@@ -9,8 +10,10 @@ port = 54000
 server = PLEX-TV
 username = plexuser@gmail.com
 password = password123
+directory = C:\Movies\
 
 [qBittorrent]
-host = localhost:8080
+host = http://127.0.0.1:8080
 username = admin
 password = password123
+
