--- a/Server/config.ini
+++ b/Server/config.ini
@@ -10,7 +10,10 @@ port = 54000
 server = PLEX-TV
 username = plexuser@gmail.com
 password = password123
-directory = C:\Movies\
+directories = [
+    "C:\Movies",
+    "C:\Tv"
+    ]
 
 [qBittorrent]
 host = http://127.0.0.1:8080
