--- a/Server/config.ini
+++ b/Server/config.ini
@@ -1,22 +1,25 @@
 [General]
-savepath = C:\Movies\plexSyncDownloaded
+savepath = I:\Movies\plexTorrentSync\downloaded
+qbt_savepath = H:\qBittorrent\qbittorrent.exe
 
 [Server]
-name = PLEX-PC
-host = 127.0.0.1
+name = EUAN-PC
+host = 192.168.1.11
 port = 54000
 
 [Plex]
-server = PLEX-TV
-username = plexuser@gmail.com
-password = password123
+server = Euan-PC
+username = euandmj97@gmail.com
+password = plex1997
 directories = [
-    "C:\Movies",
-    "C:\Tv"
+    "I:\Movies\Movies", 
+    "I:\Movies\TV", 
+    "I:\Movies\Documentaries", 
+    "I:\Movies\Anime"
     ]
+
 
 [qBittorrent]
 host = http://127.0.0.1:8080
 username = admin
-password = password123
-
+password = admin1234
